src/test/ui/vtable-res-trait-param.stderr
error[E0277]: the trait bound `{integer}: TraitA` is not satisfied
  --> $DIR/vtable-res-trait-param.rs:17:7
   |
LL |     b.gimme_an_a(y)
   |       ^^^^^^^^^^ the trait `TraitA` is not implemented for `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
